[package]
name = "done_rpi_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = [ "blocking" ] }
toml = "0.8.8"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = [ "derive" ] }